feat: add Docker support to Makefile for building and managing nexa_sdk

--- a/runner/Makefile
+++ b/runner/Makefile
@@ -24,7 +24,14 @@ else
 	UNZIP   := unzip -o build/nexasdk-bridge.zip -d build
 endif
 
-.PHONY: build link download clean
+DOCKER_TAG ?= latest
+BASE_IMAGE ?= ubuntu:22.04
+DOCKER_ARCH := $(ARCH)
+ifeq ($(DOCKER_ARCH), x86_64)
+	DOCKER_ARCH := amd64
+endif
+
+.PHONY: build link download clean docker docker-cuda
 
 build:
 	go build -ldflags "-s -w" -o build/nexa$(EXE) ./cmd/nexa-launcher
@@ -45,5 +52,21 @@ download: clean
 	$(RM) build/nexasdk-bridge.zip
 	$(RM) build/nexa_bridge.lib
 
+docker: build
+	$(MKDIR) release/linux/nexa_sdk.$(DOCKER_ARCH)
+	cp -r build/* release/linux/nexa_sdk.$(DOCKER_ARCH)/
+	chmod +x release/linux/nexa_sdk.$(DOCKER_ARCH)/nexa
+	chmod +x release/linux/nexa_sdk.$(DOCKER_ARCH)/nexa-cli
+	docker build \
+		--build-arg BASE_IMAGE=$(BASE_IMAGE) \
+		--build-arg TARGETARCH=$(DOCKER_ARCH) \
+		-t nexa4ai/nexasdk:$(DOCKER_TAG) \
+		-f release/linux/Dockerfile \
+		release/linux
+
+docker-cuda:
+	$(MAKE) docker BASE_IMAGE=nvidia/cuda:12.9.1-runtime-ubuntu22.04 DOCKER_TAG=$(DOCKER_TAG)-cuda
+
 clean:
 	-$(RM) build
+	-$(RM) release/linux/nexa_sdk.*
