fix: add linux docker dependencies of tbb, omp and espeak-ng required by the npu plugin

--- a/runner/release/linux/Dockerfile
+++ b/runner/release/linux/Dockerfile
@@ -10,9 +10,10 @@ LABEL org.opencontainers.image.title="Nexa SDK"
 LABEL org.opencontainers.image.description="Nexa SDK CLI for running multi models"
 LABEL org.opencontainers.image.vendor="NexaAI"
 
+# We might be able to reduce the "-dev" dependencies to non-dev ones, but need testing for that.
 RUN DEBIAN_FRONTEND=noninteractive \
     apt-get update \
-    && apt-get install -y libgomp1 curl ffmpeg sox \
+    && apt-get install -y libgomp1 curl ffmpeg sox libtbb-dev libomp-dev libespeak-ng1 \
     && rm -rf /var/lib/apt/lists/*
 
 ARG TARGETARCH
