--- a/cookbook/PC/RAG-VLM/requirements.txt
+++ b/cookbook/PC/RAG-VLM/requirements.txt
@@ -1,8 +1,8 @@
 faiss-cpu>=1.8
-requests>=2.31
-pydantic>=2.0
+requests>=2.32.4
+pydantic>=2.4.0
 python-docx>=1.1
 psutil
-gradio
+gradio>=6.3.0
 sentence_transformers
-langchain<0.2.0
+langchain>=0.3.1
