--- a/bindings/android/gradle/libs.versions.toml
+++ b/bindings/android/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-aiNexaCore = "0.0.16"
+aiNexaCore = "0.0.11"
 agp = "8.12.1"
 kotlin = "2.2.0"
 coreKtx = "1.10.1"
@@ -23,6 +23,8 @@ toaster = "13.8"
 recyclerview = "1.3.1"
 gson = "2.10.1"
 glide = "5.0.5"
+activityVersion = "1.12.2"
+markwon = "4.6.2"
 
 [libraries]
 glide = {group = "com.github.bumptech.glide", name = "glide", version.ref = "glide"}
@@ -54,6 +56,11 @@ material = { group = "com.google.android.material", name = "material", version.r
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 ai-nexa-core = {group = "ai.nexa", name = "core", version.ref = "aiNexaCore"}
+androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activityVersion" }
+markwon-core = { group = "io.noties.markwon", name = "core", version.ref = "markwon" }
+markwon-strikethrough = { group = "io.noties.markwon", name = "ext-strikethrough", version.ref = "markwon" }
+markwon-tables = { group = "io.noties.markwon", name = "ext-tables", version.ref = "markwon" }
+markwon-linkify = { group = "io.noties.markwon", name = "linkify", version.ref = "markwon" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
