fix: update go vet command to include additional directories for linting

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,4 +23,4 @@ jobs:
           [ -z "$unformatted" ] || (echo "Unformatted: $unformatted"; exit 1)
       - name: go vet
         working-directory: runner
-        run: go vet ./...
+        run: go vet ./cmd/... ./internal/... ./server/...
