--- a/bindings/android/gradle/libs.versions.toml
+++ b/bindings/android/gradle/libs.versions.toml
@@ -1,5 +1,19 @@
+# Copyright 2024-2026 Nexa AI, Inc.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 [versions]
-aiNexaCore = "0.0.11"
+aiNexaCore = "0.0.22"
 agp = "8.12.1"
 kotlin = "2.2.0"
 coreKtx = "1.10.1"
@@ -61,6 +75,8 @@ markwon-core = { group = "io.noties.markwon", name = "core", version.ref = "mark
 markwon-strikethrough = { group = "io.noties.markwon", name = "ext-strikethrough", version.ref = "markwon" }
 markwon-tables = { group = "io.noties.markwon", name = "ext-tables", version.ref = "markwon" }
 markwon-linkify = { group = "io.noties.markwon", name = "linkify", version.ref = "markwon" }
+markwon-latex = { group = "io.noties.markwon", name = "ext-latex", version.ref = "markwon" }
+markwon-inline-parser = { group = "io.noties.markwon", name = "inline-parser", version.ref = "markwon" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
